restarted project. kept UI build and rewrote funstions.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <div class="row">
             <h2>Generate a Password</h2>
           </div>
-          <div class="row">
+          <div class="row rowHeight" >
             <p id="errorMsg"></p>
           </div>
           <div class="row">
@@ -37,7 +37,7 @@
             </div>
             <div class="col-lg-6 borderLeft">
               <p>Choose how many characters you would like in your password.</p>
-              <input type="number" min="8" max="128">
+              <input id="passwordLength" type="number" min="8" max="128">
             </div>
 
           </div>
