--- a/index.html
+++ b/index.html
@@ -1,60 +1,64 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta charset='UTF-8' />
+    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
+    <meta http-equiv='X-UA-Compatible' content='ie=edge' />
     <title>Password Generator</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel='stylesheet' href='style.css' />
+    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css' integrity='sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm' crossorigin='anonymous'>
   </head>
   <body>
-    <div class="wrapper">
+    <div class='wrapper'>
       <header>
         <h1>Password Generator</h1>
       </header>
-      <div class="card">
-        <div class="card-header">
+      <div class='card'>
+        <div class='card-header'>
           
-          <div class="row">
+          <div class='row'>
             <h2>Generate a Password</h2>
           </div>
-          <div class="row rowHeight" >
-            <p id="errorMsg"></p>
+          <div class='row ' >
+            <div class='col-lg-6'>
+              <p id='errorMsgOptions' class='errorMsg' aria-hidden='true' ></p>
+            </div>
+            <div class='col-lg-6'>
+              <p id='errorMsgLen' class='errorMsg' aria-hidden='true'></p>
+            </div>
           </div>
-          <div class="row">
-            <div class="col-lg-6">
+          <div class='row'>
+            <div class='col-lg-6'>
               <!-- Checkboxes for password -->
               <p>Choose at least one of the options below.</p>
-              <input type="checkbox" id="lowerCase" name="lowerCase" value="lowerCase">
-              <label for="lowerCase">LowerCase Characters</label><br>
-              <input type="checkbox" id="upperCase" name="upperCase" value="upperCase">
-              <label for="upperCase">UpperCase Characters</label><br>
-              <input type="checkbox" id="numeric" name="numeric" value="numeric">
-              <label for="numeric">Numeric Characters</label><br>
-              <input type="checkbox" id="specialChar" name="specialChar" value="specialChar">
-              <label for="specialChar">Special Characters</label><br>
+              <form id='userOptions'>
+                <input type='checkbox' id='lowerCase' name='lowerCase' value='lowerCase'>
+                <label for='lowerCase'>LowerCase Characters</label><br>
+                <input type='checkbox' id='upperCase' name='upperCase' value='upperCase'>
+                <label for='upperCase'>UpperCase Characters</label><br>
+                <input type='checkbox' id='numeric' name='numeric' value='numeric'>
+                <label for='numeric'>Numeric Characters</label><br>
+                <input type='checkbox' id='specialChar' name='specialChar' value='specialChar'>
+                <label for='specialChar'>Special Characters</label><br>
+              </form> 
             </div>
-            <div class="col-lg-6 borderLeft">
+            <div class='col-lg-6 borderLeft'>
               <p>Choose how many characters you would like in your password.</p>
-              <input id="passwordLength" type="number" min="8" max="128">
+              <input id='passLen' type='number' min='8' max='128'>
             </div>
 
           </div>
         </div>
-        <div class="card-body">
-          <textarea
-            readonly
-            id="password"
-            placeholder="Your Secure Password"
-            aria-label="Generated Password"
-          ></textarea>
+        <div class='card-body'>
+          <p>Secure Password:</p>
+          <textarea id='password' aria-label='Generated Password' readonly>
+          </textarea>
         </div>
-        <div class="card-footer">
-          <button id="generate" class="btn">Generate Password</button>
+        <div class='card-footer'>
+          <button id='generate' class='btn'>Generate Password</button>
         </div>
       </div>
     </div>
-    <script src="script.js"></script>
+    <script src='script.js'></script>
   </body>
 </html>
